--- a/src/layout/Layout/Layout.module.css
+++ b/src/layout/Layout/Layout.module.css
@@ -57,3 +57,10 @@
   margin-bottom: 20px;
   filter: drop-shadow(0px 8px 40px rgba(255, 197, 41, 0.25));
 }
+.main-layout__navigation-link:hover {
+  color: var(--primary-hover-color);
+}
+
+.active {
+  color: var(--primary-hover-color);
+}
