--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,35 +1,31 @@
 .input {
-  font-size: 17px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 400;
   color: var(--text-color);
+  background-color: #fcfcfd;
   border: 1px solid #eee;
   box-shadow: 15px 20px 45px 0px rgba(233, 233, 233, 0.25);
   border-radius: 10px;
-  padding: 20px;
+  padding: 16px 30px 16px 44px;
+  min-width: 256px;
 }
+
+/* .input::placeholder {
+  font-size: 14px;
+} */
 
 .invalid {
   border-color: red;
 }
 
-.input-block {
+.input-wrapper {
   position: relative;
 }
 
-.input-block__icon {
+.icon {
   position: absolute;
   left: 18px;
   top: 50%;
   transform: translateY(-50%);
-}
-
-.input-block__search {
-  width: 256px;
-  font-size: 14px;
-  padding-left: 45px;
-}
-
-.block__search::placeholder {
-  font-size: 14px;
 }
